--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -1,6 +1,7 @@
 <app-main-nav
   [config]="mainNavConfig"
-  (vertEvent)="handleVertEvent($event)"
+  (bottomSheetEvent)="handleBottomSheetEvent($event)"
+  (bottomSheetOpened)="openBottomSheet()"
   (back)="onBack()">
 
   <app-mission-details-view
