--- a/src/app/timesheet/timesheet-details/timesheet-details.component.html
+++ b/src/app/timesheet/timesheet-details/timesheet-details.component.html
@@ -2,6 +2,7 @@
 
   <app-timesheet-details-view
   [date]="date"
+  [mission]="mission$ | async"
   [timesheetInfo]="timesheetInfo$ | async"
   (hasConfirmed)="confirmTimesheet($event)"
   (allConfirmed)="confirmTimesheets($event)"
