--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,7 +1,8 @@
 <app-main-nav
   [config]="mainNavConfig"
   (back)="onBack()"
-  (vertEvent)="handleVertEvent($event)">
+  (bottomSheetEvent)="handleBottomSheetEvent($event)"
+  (bottomSheetOpened)="openBottomSheet()">
 
   <app-user-form-view
   [user]="user"
