--- a/src/app/shared/components/hour-progress-bar/hour-progress-bar.component.html
+++ b/src/app/shared/components/hour-progress-bar/hour-progress-bar.component.html
@@ -1,5 +1,5 @@
 
-<div class="progress-bar-container" fxLayout="row" fxLayoutAlign="start center"
+<div class="progress-bar-container" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1px"
   [@listAnimation]="hours + invalidHours">
 
   <div class="progress-bar mat-elevation-z6" *ngFor="let n of hourArray">
