week list UI change to mission bars instead of hour bars

--- a/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="space-between start" class="mat-elevation-z6 timesheet-card"
   *ngIf="timesheet"
-  [ngClass]="timesheet.status == 0 ? 'no-padding-top' : ''">
+  [ngClass]="{'no-padding-top': timesheet.status == 0, 'no-margin-top': inDialog}">
 
   <span fxLayout="row" fxLayoutAlign="start center" *ngIf="timesheet.status == 0" >
 
