made timesheet card smart, removed include mission from foreach loops

--- a/src/app/timesheet/components/timesheet-card-dialog-wrapper/timesheet-card-dialog-wrapper.component.html
+++ b/src/app/timesheet/components/timesheet-card-dialog-wrapper/timesheet-card-dialog-wrapper.component.html
@@ -1,1 +1,1 @@
-<app-timesheet-card [timesheet]="timesheet" inDialog="true"></app-timesheet-card>
+<app-timesheet-card [timesheetId]="timesheetId" inDialog="true" (dialogClosed)="closeDialog()"></app-timesheet-card>
