--- a/src/app/timesheet/components/timesheet-mission-bar/timesheet-mission-bar.component.html
+++ b/src/app/timesheet/components/timesheet-mission-bar/timesheet-mission-bar.component.html
@@ -1,12 +1,10 @@
 <div class="mission-bar" 
     [ngClass]="color == 'primary' ? 'bg-primary':'bg-warn'" 
     (click)="openDialog()"
-    fxLayout="column" fxLayoutAlign="center stretch" matRipple #missionBar>
+    fxLayout="column" fxLayoutAlign="center stretch" matRipple>
     
     <span class="ellipsis">
         {{ timesheet.totalHours }} timer
     </span>
-    <span class="mat-caption ellipsis" *ngIf="timesheet.mission">
-        {{ timesheet.mission.address }}
-    </span>
+
 </div>
