--- a/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="column" fxLayoutAlign="space-between start" class="mat-elevation-z6 timesheet-card"
   *ngIf="timesheet"
-  [ngClass]="{'no-padding-top': timesheet.status == 0, 'no-margin-top': inDialog}">
+  [ngClass]="{'no-padding-top': timesheet.status == 0}">
 
   <span fxLayout="row" fxLayoutAlign="start center" *ngIf="timesheet.status == 0" >
 
     <span class="color-warn">Ubekreftet!</span>
-    <button mat-button color="primary" (click)="hasConfirmed.emit()">Trykk for å bekrefte</button>
+    <button mat-button color="primary" (click)="confirmTimesheet()">Trykk for å bekrefte</button>
 
   </span>
 
@@ -32,7 +32,7 @@
     </mat-icon>
 
     <button mat-icon-button color="warn" style="margin-top:auto"
-      *ngIf="timesheet.status === 0" (click)="hasDeleted.emit()">
+      *ngIf="timesheet.status === 0" (click)="deleteTimesheet()">
       <mat-icon>delete_forever</mat-icon>
     </button>
 
