--- a/src/app/timesheet/components/timesheet-details-view/timesheet-details-view.component.html
+++ b/src/app/timesheet/components/timesheet-details-view/timesheet-details-view.component.html
@@ -3,19 +3,21 @@
 
 <mat-divider></mat-divider>
 
-<div class="form-container">
+<div class="timesheet-container">
+
   <span class="form-header">Registrerte timer for {{ isDateView ? 'dato' : 'oppdrag' }}</span>
   <button mat-button color="primary" (click)="confirmAll()">Bekreft alle</button>
 
-  <app-timesheet-card
-    *ngFor="let timesheet of timesheetInfo.openTimesheets"
-    [timesheet]="timesheet"
-    (hasConfirmed)="hasConfirmed.emit(timesheet.id)"
-    (hasDeleted)="hasDeleted.emit(timesheet.id)">
-  </app-timesheet-card>
+  <div  fxLayout="column" fxLayoutGap="8px">
+    <app-timesheet-card
+      *ngFor="let timesheet of timesheetInfo.openTimesheets"
+      [timesheetId]="timesheet.id">
+    </app-timesheet-card>
 
-  <app-timesheet-card
-    *ngFor="let timesheet of timesheetInfo.closedTimesheets"
-    [timesheet]="timesheet">
-  </app-timesheet-card>
+    <app-timesheet-card
+      *ngFor="let timesheet of timesheetInfo.closedTimesheets"
+      [timesheetId]="timesheet.id">
+    </app-timesheet-card>
+  </div>
+
 </div>
