--- a/src/app/timesheet/timesheet-details/timesheet-details.component.html
+++ b/src/app/timesheet/timesheet-details/timesheet-details.component.html
@@ -5,7 +5,8 @@
   [mission]="mission$ | async"
   [timesheetInfo]="timesheetInfo$ | async"
 
-  (allConfirmed)="confirmTimesheets($event)"></app-timesheet-details-view>
+  (allConfirmed)="confirmTimesheets($event)">
+</app-timesheet-details-view>
 
 </app-main-nav>
 
