--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
           <mat-divider class="mid-divider"></mat-divider>
         </mat-list-item>
 
-        <mat-list-item [routerLink]="['/timeliste']">
+        <mat-list-item [routerLink]="['/timeliste/uker']">
           <mat-icon mat-list-icon>timer</mat-icon>
           <span mat-line>Timeliste</span>
           <mat-icon>chevron_right</mat-icon>
