--- a/src/app/shared/layout/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/layout/bottom-nav/bottom-nav.component.html
@@ -21,7 +21,7 @@
 
         </button>
 
-        <button *ifRole="[Roles.Leder, Roles.Mellomleder]" [routerLink]="['/timeliste']" [routerLinkActive]="['active-icon']"
+        <button *ifRole="[Roles.Leder, Roles.Mellomleder]" [routerLink]="['/timeliste/uker']" [routerLinkActive]="['active-icon']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Gå til timeliste">
 
             <mat-icon>timer</mat-icon>
