--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -27,7 +27,7 @@
         <p mat-line>Oppdrag</p>
       </a>
       <mat-divider class="mid-divider"></mat-divider>
-      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timeliste']" [routerLinkActive]="['active']">
+      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timeliste/uker']" [routerLinkActive]="['active']">
         <mat-icon mat-list-icon>timer</mat-icon>
         <p mat-line>Timeliste</p>
       </a>
