--- a/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
@@ -14,7 +14,7 @@
     <span fxLayout="column" fxLayoutAlign="start start" >
 
       <span class="mat-body-2">
-        {{ this.startDate.format("Do MMM") }}
+        {{ this.startDate.format("Do MMM YYYY") }}
         {{ this.startDate.format("HH:mm") }} - {{ this.endDate.format("HH:mm") }}
       </span>
       <span class="mat-small">
