--- a/src/app/timesheet/timesheet-details/timesheet-details.component.html
+++ b/src/app/timesheet/timesheet-details/timesheet-details.component.html
@@ -1,12 +1,11 @@
 <app-main-nav [config]="mainCfg" (back)="onBack()">
 
   <app-timesheet-details-view
-  [date]="date"
-  [mission]="mission$ | async"
-  [timesheetInfo]="timesheetInfo$ | async"
-
-  (allConfirmed)="confirmTimesheets($event)">
-</app-timesheet-details-view>
+    [date]="date"
+    [mission]="mission$ | async"
+    [timesheets]="timesheets$ | async"
+    (allConfirmed)="confirmTimesheets($event)">
+  </app-timesheet-details-view>
 
 </app-main-nav>
 
