--- a/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.scss
+++ b/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.scss
@@ -5,3 +5,23 @@
     white-space: nowrap;
     height:$timesheet-week-list-height;
 }
+
+.width-no-handset{
+  width:calc(((100vw - #{$sidenav-width * 1px}) / 7) - 1px);
+}
+
+.width-handset{
+  width:calc((100vw / 5) - 1px);
+}
+
+.progress-bar-container{
+  margin-top:1px;
+  min-height:25px;
+  color:$bg-black;
+  position:relative;
+}
+
+.timesheet-bar{
+    min-width:58px;
+    height:100%; 
+}
