Added child routing with layout & timesheet statistic module with table view, data retrieval and aggregation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         <span mat-line>Administrer data</span>
         <mat-icon>chevron_right</mat-icon>
       </mat-list-item>
-      <mat-list-item [routerLink]="['/brukere']">
+      <mat-list-item [routerLink]="['/timestatistikk']">
         <mat-icon mat-list-icon>assessment</mat-icon>
         <span mat-line>Timestatistikk</span>
         <mat-icon>chevron_right</mat-icon>
