--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
@@ -1,8 +1,9 @@
 
 
 
-<mat-toolbar #imageToolBar class="image_toolbar p-0 color-primary" [@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
-    <button mat-icon-button aria-label="Lukk" class="top_left_fab" (click)="onNoClick()">
+<mat-toolbar #imageToolBar class="image_toolbar color-primary" fxLayout="row" fxLayoutAlign="space-between center"
+[@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
+    <button mat-icon-button aria-label="Lukk" (click)="onNoClick()">
         <mat-icon class="icon_150">chevron_left</mat-icon>
     </button>
     <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
