--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -1,9 +1,9 @@
-<div fxLayout="column" fxLayoutAlign="start stretch" class="content-container mb-0 mt-0 h-100">
+<div fxLayout="column" fxLayoutAlign="start stretch" class="content-container mb-0 mt-2 h-100">
         
         <ng-container>
             <app-timesheet-list-menu 
                 [filter]="getCurrentFilter()"
-                (filterClicked)="openBottomSheet()"
+                (filterClick)="openBottomSheet()"
                 (statusChanged)="changeStatus($event)">
             </app-timesheet-list-menu>
 
